fixed missed spacing issue

--- a/galaxyui/src/app/authors/detail/author-detail.component.less
+++ b/galaxyui/src/app/authors/detail/author-detail.component.less
@@ -99,6 +99,8 @@
         }
         .count {
             font-weight: 700;
+            margin-left: 1px;
+            margin-right: 3px;
         }
     }
 
